side menu slideout

--- a/index.html
+++ b/index.html
@@ -5,10 +5,24 @@
         <title>UI Sandbox</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
         <link href="css/style.css" rel="stylesheet">
     </head>
 
         <body>
+
+            <!-- Hamburger Icon -->
+            <i id="open" class="material-icons">menu</i>
+
+            <!--===========================
+                        Menu
+            ============================-->
+            <div id="menu" class=" ">
+                <i id="close" class="material-icons close">close</i>
+                <h2>UI Sandbox</h2>
+                
+            </div>
 
 
 
