--- a/index.html
+++ b/index.html
@@ -18,13 +18,31 @@
             <!--===========================
                         Menu
             ============================-->
-            <div id="menu" class=" ">
+            <div class="menu">
                 <i id="close" class="material-icons close">close</i>
-                <h2>UI Sandbox</h2>
+                <h2>UI<strong>SANDBOX</strong></h2>
+                <ul>
+                    <a href="/buttons"><li class="active"><i class="material-icons">link</i> Buttons</li></a>
+
+                    <a href="/toggles"><li><i class="material-icons">all_inclusive</i> Toggles</li></a>
+
+                    <a href="/toggles"><li><i class="material-icons">insert_chart</i> Graphs</li></a>
+                </ul>
                 
             </div>
 
+            <main>
+                <article>
+                    <h1>Buttons</h1>
+                    <hr>
+                    <button type="button">Button</button>
+                    <label class="switch">
+                        <input type="checkbox">
+                        <span class="slider round"></span>
+                    </label>
+                </article>
 
+            </main>
 
 
         <!--===========================
