--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <article>
                     <h1>Buttons</h1>
                     <hr>
-                    <button type="button">Button</button>
+                    <button class="btn btn-round bg-brand" type="button">Button</button>
                     <label class="switch">
                         <input type="checkbox">
                         <span class="slider round"></span>
