menu active border and header styling

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             ============================-->
             <div class="menu">
                 <i id="close" class="material-icons close">close</i>
-                <h2><strong>UI</strong>SANDBOX</h2>
+                <h2><strong>UI</strong><span>SANDBOX</span></h2>
                 <ul>
                     <a href="/buttons"><li class="active"><i class="material-icons">link</i> Buttons</li></a>
 
