buttons and font awesome

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
+        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+
         <link href="css/style.css" rel="stylesheet">
     </head>
 
@@ -22,11 +24,11 @@
                 <i id="close" class="material-icons close">close</i>
                 <h2><strong>UI</strong><span>SANDBOX</span></h2>
                 <ul>
-                    <a href="/buttons"><li class="active"><i class="material-icons">link</i> Buttons</li></a>
+                    <a href="/buttons"><li class="active"><i class="fa fa-minus-square-o fa-lg" aria-hidden="true"></i> Buttons</li></a>
 
-                    <a href="/toggles"><li><i class="material-icons">all_inclusive</i> Toggles</li></a>
+                    <a href="/toggles"><li><i class="fa fa-toggle-on fa-lg" aria-hidden="true"></i> Toggles</li></a>
 
-                    <a href="/toggles"><li><i class="material-icons">insert_chart</i> Graphs</li></a>
+                    <a href="/toggles"><li><i class="fa fa-bar-chart fa-lg" aria-hidden="true"></i> Graphs</li></a>
                 </ul>
                 
             </div>
@@ -35,7 +37,7 @@
                 <article>
                     <h1>Buttons</h1>
                     <hr>
-                    <button class="btn btn-round bg-brand" type="button">Button</button>
+                    <button class="btn btn-outline" type="button">Button</button>
                     <label class="switch">
                         <input type="checkbox">
                         <span class="slider round"></span>
