--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
                     <div class="card-container">
                         <div class="card">
                             <div class="front">
-                                <h1>Hello</h1>
+                                <h3>Touch Me</h3>
                             </div>
                             <div class="back">
-                                <h1>goodbye</h1>
+                                <h3>Ohh Cheeky</h3>
                             </div>
                         </div>
                     </div>
