--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
             </div>
 
             <main>
+                <header>
+                    <h1 class="logo">Parallax Title</h1>
+                </header>
+
                 <article>
                     <h1>Buttons</h1>
                     <hr>
@@ -42,6 +46,21 @@
                         <input type="checkbox">
                         <span class="slider round"></span>
                     </label>
+                </article>
+
+                 <article>
+                    <h1>Cards</h1>
+                    <hr>
+                    <div class="card-container">
+                        <div class="card">
+                            <div class="front">
+                                <h3>Touch Me</h3>
+                            </div>
+                            <div class="back">
+                                <h3>Ohh Cheeky</h3>
+                            </div>
+                        </div>
+                    </div>
                 </article>
 
                  <article>
