close menu on smooth scrolling

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
                 <i id="close" class="material-icons close">close</i>
                 <h2><strong>UI</strong><span>SANDBOX</span></h2>
                 <ul>
-                    <a href="/buttons"><li class="active"><i class="fa fa-minus-square-o fa-lg" aria-hidden="true"></i> Buttons</li></a>
+                    <a href="#buttons"><li class="active"><i class="fa fa-minus-square-o fa-lg" aria-hidden="true"></i> Buttons</li></a>
 
-                    <a href="/toggles"><li><i class="fa fa-toggle-on fa-lg" aria-hidden="true"></i> Toggles</li></a>
+                    <a href="#cards"><li><i class="fa fa-toggle-on fa-lg" aria-hidden="true"></i> Cards</li></a>
 
-                    <a href="/toggles"><li><i class="fa fa-bar-chart fa-lg" aria-hidden="true"></i> Graphs</li></a>
+                    <a href="#toggles"><li><i class="fa fa-bar-chart fa-lg" aria-hidden="true"></i> Graphs</li></a>
                 </ul>
                 
             </div>
@@ -38,7 +38,7 @@
                     <h1 class="logo">Parallax Title</h1>
                 </header>
 
-                <article>
+                <article id="buttons">
                     <h1>Buttons</h1>
                     <hr>
                     <button class="btn btn-outline" type="button">Button</button>
@@ -48,7 +48,7 @@
                     </label>
                 </article>
 
-                 <article>
+                 <article id="cards">
                     <h1>Cards</h1>
                     <hr>
                     <div class="card-container">
