--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <ul>
                     <a href="#buttons"><li class="active"><i class="fa fa-minus-square-o fa-lg" aria-hidden="true"></i> Buttons</li></a>
 
-                    <a href="#cards"><li><i class="fa fa-toggle-on fa-lg" aria-hidden="true"></i> Cards</li></a>
+                    <a href="#cards"><li><i class="fa fa-id-card-o fa-lg" aria-hidden="true"></i> Cards</li></a>
 
                     <a href="#toggles"><li><i class="fa fa-bar-chart fa-lg" aria-hidden="true"></i> Graphs</li></a>
                 </ul>
