car flip on button press

--- a/index.html
+++ b/index.html
@@ -54,30 +54,15 @@
                     <div class="card-container">
                         <div class="card">
                             <div class="front">
-                                <h3>Touch Me</h3>
+                                <h3>What's 2+ 2?</h3>
+                                <button class="btn btn-outline spin" type="button">Answer</button>
                             </div>
                             <div class="back">
-                                <h3>Ohh Cheeky</h3>
+                                <h1>4</h1>
                             </div>
                         </div>
                     </div>
                 </article>
-
-                 <article>
-                    <h1>Cards</h1>
-                    <hr>
-                    <div class="card-container">
-                        <div class="card">
-                            <div class="front">
-                                <h3>Touch Me</h3>
-                            </div>
-                            <div class="back">
-                                <h3>Ohh Cheeky</h3>
-                            </div>
-                        </div>
-                    </div>
-                </article>
-
 
             </main>
 
