--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
                 <article id="buttons">
                     <h1>Buttons</h1>
                     <hr>
-                    <button class="btn btn-outline" type="button">Button</button>
+                    <button class="btn bg-brand" type="button">Button</button>
+                    <button class="btn btn-outline" type="button">Outline</button>
+                    <button class="btn btn-outline btn-round" type="button">Round</button>
                     <label class="switch">
                         <input type="checkbox">
                         <span class="slider round"></span>
