remove display hidden from modal

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             </main>
 
             <!-- MODAL -->
-            <div class="modal hide">
+            <div class="modal">
                 <div class="modal-bg"></div>
                 <div class="modal-main">
 
