--- a/index.html
+++ b/index.html
@@ -41,9 +41,44 @@
                 <article id="buttons">
                     <h1>Buttons</h1>
                     <hr>
+
                     <button class="btn bg-brand" type="button">Button</button>
+
+                    <h3>HTML</h3>
+
+                    <script src="https://gist.github.com/Middi/17d531c38c867d58fb89e613afce59b2.js"></script>
+
+                    <h3>SCSS</h3>
+
+                    <script src="https://gist.github.com/Middi/1edbcc1eb4a84d0ac7427181822ea1ea.js"></script>
+
+                    <hr>
+
                     <button class="btn btn-outline" type="button">Outline</button>
+
+                    <h3>HTML</h3>
+
+                    <script src="https://gist.github.com/Middi/67966463abcea438cf128baeb6ead7e6.js"></script>
+
+                    <h3>SCSS</h3>
+
+                    <script src="https://gist.github.com/Middi/15b0370fe599396d5aee084182603a59.js"></script>
+
+
+                    <hr>
+
                     <button class="btn btn-outline btn-round" type="button">Round</button>
+
+                    <h3>HTML</h3>
+
+                    <script src="https://gist.github.com/Middi/ca28f86113794d60cfd8cb727230dc8f.js"></script>
+
+                    <h3>SCSS</h3>
+
+                    <script src="https://gist.github.com/Middi/61212aff4844a9b536fc1ee665178e66.js"></script>
+
+
+                        
                     <label class="switch">
                         <input type="checkbox">
                         <span class="slider round"></span>
