toggle gist code

--- a/index.html
+++ b/index.html
@@ -77,13 +77,26 @@
 
                     <script src="https://gist.github.com/Middi/61212aff4844a9b536fc1ee665178e66.js"></script>
 
+                </article>
 
-                        
+                 <article id="cards">
+                    <h1>Toggle</h1>
+                    <hr>
+
                     <label class="switch">
                         <input type="checkbox">
                         <span class="slider round"></span>
                     </label>
-                </article>
+
+                    <h3>HTML</h3>
+
+                    <script src="https://gist.github.com/Middi/cf4804e21b47e35e7f215b36f9185e35.js"></script>
+
+                    <h3>SCSS</h3>
+                    
+                    <script src="https://gist.github.com/Middi/e887b56639cdfe6e7c91e8dada5c6b2d.js"></script>
+
+                 </article>
 
                  <article id="cards">
                     <h1>Cards</h1>
