--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
                 <ul>
                     <a href="#buttons"><li class="active"><i class="fa fa-minus-square-o fa-lg" aria-hidden="true"></i> Buttons</li></a>
 
+                    <a href="#toggles"><li><i class="fa fa-toggle-on fa-lg" aria-hidden="true"></i> Toggles</li></a>
+
                     <a href="#cards"><li><i class="fa fa-id-card-o fa-lg" aria-hidden="true"></i> Cards</li></a>
 
                     <a href="#modals"><li><i class="fa fa-window-maximize fa-lg" aria-hidden="true"></i>Modals</li></a>
@@ -79,7 +81,7 @@
 
                 </article>
 
-                 <article id="cards">
+                 <article id="toggles">
                     <h1>Toggle</h1>
                     <hr>
 
