added moving circle

--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
                     <a href="#cards"><li><i class="fa fa-id-card-o fa-lg" aria-hidden="true"></i> Cards</li></a>
 
                     <a href="#modals"><li><i class="fa fa-window-maximize fa-lg" aria-hidden="true"></i>Modals</li></a>
+
+                    <a href="#move"><li><i class="fa fa-arrows fa-lg" aria-hidden="true"></i>Move</li></a>
                 </ul>
                 
             </div>
@@ -121,6 +123,13 @@
                     <h1>Modals</h1>
                     <hr>
                     <button id="modal" class="btn btn-round bg-brand" type="button">Click for Modal</button>
+                </article>
+
+                 <article id="move">
+                    <h1>Move</h1>
+                    <hr>
+                    <div class="circle"></div>
+                    <button id="move-button" class="btn btn-round bg-brand" type="button">Click to Move</button>
                 </article>
 
 
